--- a/weitaixin/src/main/res/layout/popowindow_guardian.xml
+++ b/weitaixin/src/main/res/layout/popowindow_guardian.xml
@@ -7,27 +7,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/corner_background_white"
         android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tvTitleGuardian"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="52dp"
             android:background="@drawable/corner_background_green"
             android:gravity="center"
             android:text="监护目的"
+            android:textSize="@dimen/font14"
             android:textStyle="bold" />
 
         <ListView
             android:id="@+id/lvGuardianPurpose"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="310dp"
             android:layout_below="@id/tvTitleGuardian"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="6dp"
             android:cacheColorHint="#00000000"
             android:divider="@color/gray2"
             android:dividerHeight="1dp"
@@ -36,11 +36,10 @@
             android:transcriptMode="normal" />
 
         <TextView
-            android:layout_below="@id/lvGuardianPurpose"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center"
-             />
+            android:layout_below="@id/lvGuardianPurpose"
+            android:gravity="center" />
 
     </RelativeLayout>
 
