--- a/weitaixin/src/main/res/layout/item_set_system_guardian.xml
+++ b/weitaixin/src/main/res/layout/item_set_system_guardian.xml
@@ -14,7 +14,7 @@
         android:singleLine="true"
         android:text="5秒"
         android:textColor="@color/gray9"
-        android:textSize="@dimen/font_title"/>
+        android:textSize="@dimen/font12"/>
 
     <TextView
         android:id="@+id/tvState"
