--- a/weitaixin/src/main/res/layout/fragment_wo_info.xml
+++ b/weitaixin/src/main/res/layout/fragment_wo_info.xml
@@ -114,7 +114,7 @@
             android:background="@drawable/message_count"
             android:gravity="center"
             android:text="1"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </LinearLayout>
 
 
