--- a/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
+++ b/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
@@ -1,21 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray5"
-    android:orientation="vertical"
-    tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white0"
+              android:orientation="vertical"
+              tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
 
-    <include layout="@layout/layout_title" />
+    <include layout="@layout/layout_title"/>
 
 
     <EditText
         android:id="@+id/et_phone_number_smsauthcode"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/frame_selector"
         android:hint="请输入手机号码"
         android:maxLength="11"
@@ -24,7 +24,9 @@
         android:phoneNumber="true"
         android:singleLine="true"
         android:text="13161401474"
-        android:textSize="@dimen/font_normal" />
+        android:textColor="@color/black1"
+        android:textColorHint="@color/text_color_hint"
+        android:textSize="@dimen/font_normal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +39,7 @@
         <EditText
             android:id="@+id/et_mark_number_smsauthcode"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_marginRight="12dp"
             android:layout_weight="1"
             android:background="@drawable/frame_selector"
@@ -47,56 +49,57 @@
             android:padding="14dp"
             android:singleLine="true"
             android:text="123456"
-            android:textSize="@dimen/font_normal" />
+            android:textColor="@color/black1"
+            android:textColorHint="@color/text_color_hint"
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tv_mark_number_text_smsauthcode"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/frame_selector"
+            android:background="@drawable/shape_send_verifycode"
             android:gravity="center"
-            android:padding="14dp"
             android:singleLine="true"
             android:text="发送验证码"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/cbPitch"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/pitch_selector"
-            android:button="@null"
-            android:scaleType="fitXY" />
+        <ImageView
+            android:id="@+id/iv_agree_register"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/pitch"
+            android:scaleType="fitXY"/>
 
         <TextView
-            android:id="@+id/tvRuleLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
             android:singleLine="true"
             android:text="我已阅读并接受"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal14"/>
 
         <TextView
+            android:id="@+id/tv_ruleregister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:singleLine="true"
             android:text="《微胎心注册条款》"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal14"/>
     </LinearLayout>
 
     <TextView
@@ -105,12 +108,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="102dp"
         android:background="@drawable/frame_regist_action_selector"
         android:gravity="center"
         android:padding="16dp"
         android:singleLine="true"
         android:text="确   定"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 </LinearLayout>
