修改 系统设置-修改密码   ui

--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -1,45 +1,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray5"
-    android:orientation="vertical"
-    tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white0"
+              android:orientation="vertical"
+              tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
 
-    <include layout="@layout/layout_title" />
+    <include layout="@layout/layout_title"/>
 
     <EditText
         android:id="@+id/et_phone_number_reset"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="53dp"
         android:background="@drawable/frame_selector"
         android:hint="请输入正确的手机号"
-        android:padding="14dp"
         android:singleLine="true"
         android:textSize="@dimen/font_normal"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/frame_selector">
 
         <EditText
             android:id="@+id/et_password_reset"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_marginRight="60dp"
             android:background="@null"
             android:hint="请输入新密码"
             android:padding="14dp"
             android:singleLine="true"
-            android:textSize="@dimen/font_normal" />
+            android:textColor="@color/black1"
+            android:textColorHint="@color/text_color_hint"
+            android:textSize="@dimen/font_normal"/>
 
         <CheckBox
             android:id="@+id/ivShowPassword"
@@ -49,13 +50,13 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/eye_selector"
             android:button="@null"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"/>
 
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
@@ -64,7 +65,7 @@
         <EditText
             android:id="@+id/et_mark_number_reset"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_marginRight="12dp"
             android:layout_weight="1"
             android:background="@drawable/frame_selector"
@@ -72,12 +73,14 @@
             android:numeric="integer"
             android:padding="14dp"
             android:singleLine="true"
-            android:textSize="@dimen/font_normal" />
+            android:textColor="@color/black1"
+            android:textColorHint="@color/text_color_hint"
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tv_mark_num_text_reset"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/frame_selector"
             android:gravity="center"
@@ -85,42 +88,43 @@
             android:singleLine="true"
             android:text="发送验证码"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <CheckBox
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:scaleType="fitXY"
-            android:button="@null"
-            android:background="@drawable/pitch_selector"
-             />
+        <ImageView
+            android:id="@+id/iv_agree_register"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/pitch"
+            android:scaleType="fitXY"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
             android:singleLine="true"
             android:text="我已阅读并接受"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal14"/>
 
         <TextView
+            android:id="@+id/tv_ruleregister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:singleLine="true"
             android:text="《微胎心注册条款》"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal14"/>
     </LinearLayout>
 
     <TextView
@@ -129,12 +133,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="102dp"
         android:background="@drawable/frame_regist_action_selector"
         android:gravity="center"
         android:padding="16dp"
         android:singleLine="true"
         android:text="确定"
         android:textColor="@color/white0"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 </LinearLayout>
