--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="gray11">#FFF1F1F1</color>
     <color name="gray12">#FF636363</color>
     <color name="gray13">#FFF2F2F2</color>
+    <color name="gray14">#FFBDBDBD</color>
     <color name="text_color_hint">#FFC5C7C7</color>
     <color name="black0">#FF222222</color>
     <color name="black1">#FF000000</color>
