--- a/weitaixin/src/main/res/drawable/tab_icon_02_selector.xml
+++ b/weitaixin/src/main/res/drawable/tab_icon_02_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/tab_2" android:state_pressed="true"/>
-    <item android:drawable="@drawable/tab_2" android:state_selected="true"/>
-    <item android:drawable="@drawable/tab_2_un"/>
+    <item android:drawable="@drawable/tab_monitor" android:state_pressed="true"/>
+    <item android:drawable="@drawable/tab_monitor" android:state_selected="true"/>
+    <item android:drawable="@drawable/tab_monitor_sel"/>
 
 </selector>
