--- a/weitaixin/src/main/res/layout/layout_title.xml
+++ b/weitaixin/src/main/res/layout/layout_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:background="@color/white0">
+                android:background="@color/gray6">
 
     <RelativeLayout
         android:id="@+id/back"
